@@ -1,3 +1,13 @@
+Wed Aug 10 11:45:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-win32-common.h:
+        * ace/config-win32.h:
+          Moved define to the common file
+
+        * ace/config-win32-borland.h:
+          Removed support for C++ Builder, the port is broken and not maintained
+          for years.
+
 Tue Aug  9 17:28:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * debian/patches/series:
